--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
   "homepage": "https://github.com/iraquitan/udacity-progressive-web-app#readme",
   "devDependencies": {
     "browser-sync": "^2.15.0",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "localforage": "^1.4.2"
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "localforage": "^1.4.2",
+    "sw-precache": "^4.0.0"
   }
 }
